全体的にリファクタリング