@@ -17,3 +17,16 @@ dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: "${postgresqlDriverVersion}"
     implementation project(":pj-db")
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ['--enable-preview']
+}
+
+test {
+    jvmArgs = ['--enable-preview']
+}
+
+run {
+    jvmArgs = ['--enable-preview']
+}
+
